<resources>
    <string name="app_name">Gber</string>
    <string name="AUser">Username</string>
    <string name="APass">Password</string>
    <string name="BPass">Confirm Password</string>
    <string name="ALogin">Login</string>
    <string name="ARegis">Register</string>
    <string name="BSub">Submit</string>
    <string name="BCan">Cancel</string>
    <string-array name="SizeGas">
        <item> 8 KG.(250 Bath.)</item>
        <item> 15 KG.(400Bath.)</item>
        <item> 48 KG.(1100Bath.)</item>
    </string-array>



</resources>
